--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@theme {
+    --color-primary: #232329;
+    --color-secondary: #363541;
+    --color-background: #121212;
+}
